<resources>
    <string name="app_name">Trivia App</string>
    <string name="name">Name</string>
    <string name="btn_continue">Continue</string>

    <string name="question1">Who is the best cricketer in the world?</string>
    <string name="q1_option1">Sachin Tendulkar</string>
    <string name="q1_option2">Virat Kolli</string>
    <string name="q1_option3">Adam Gilchirst</string>
    <string name="q1_option4">Jacques Kallis</string>

    <string name="question2">What are the colors in the Indian national flag?</string>
    <string name="q2_option1">White</string>
    <string name="q2_option2">Yellow</string>
    <string name="q2_option3">Orange</string>
    <string name="q2_option4">Green</string>
    <string name="btn_next">Next</string>
    <string name="summary">Summary</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_history">History</string>
    <string name="annswer">Answer :</string>
    <string name="game_date_time">Game : Date Time</string>
    <string name="summary1">Here are the answers selected :</string>
</resources>
