<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_black_white"
    android:padding="10dp"
    android:layout_marginBottom="20dp">

    <TextView
        android:id="@+id/tv_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:text="@string/game_date_time"/>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/tv_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:text="@string/question1"/>
    <TextView
        android:id="@+id/tv_answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:text="@string/annswer"/>


    <TextView
        android:id="@+id/tv_question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:text="@string/question2"/>
    <TextView
        android:id="@+id/tv_answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:text="@string/annswer"/>

</LinearLayout>