<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SummaryActivity">

    <RelativeLayout
        android:id="@+id/rl_summary"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="vertical"
        android:background="@drawable/background">
        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:text="@string/summary"/>
    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/rl_summary"
        android:layout_above="@+id/ll_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/tv_summary1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:text="@string/summary1"/>

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/tv_question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:text="@string/question1"/>
            <TextView
                android:id="@+id/tv_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:text="@string/annswer"/>


            <TextView
                android:id="@+id/tv_question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:text="@string/question2"/>
            <TextView
                android:id="@+id/tv_answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:text="@string/annswer"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/btn_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/button_design"
            android:text="@string/btn_finish"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />
        <Button
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/button_design"
            android:text="@string/btn_history"/>
    </LinearLayout>
</RelativeLayout>