<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".QuestionActivity2">

    <RelativeLayout
        android:id="@+id/rl_question2"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="vertical"
        android:background="@drawable/background">
        <TextView
            android:id="@+id/tv_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:text="@string/question2"/>
    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/rl_question2"
        android:layout_above="@+id/btn_next2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/cb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/gray"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:text="@string/q2_option1"
                android:layout_marginTop="10dp"/>

            <CheckBox
                android:id="@+id/cb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/gray"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:text="@string/q2_option2"
                android:layout_marginTop="20dp"/>

            <CheckBox
                android:id="@+id/cb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/gray"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:text="@string/q2_option3"
                android:layout_marginTop="20dp"/>

            <CheckBox
                android:id="@+id/cb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/gray"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:text="@string/q2_option4"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_next2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:background="@drawable/button_design"
        android:text="@string/btn_next"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>